--- a/ProjectESFOT/css/style.css
+++ b/ProjectESFOT/css/style.css
@@ -6,13 +6,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 --*/
 /*--header--*/
 h1,h2,h3,h4,h5,h6{
-	font-family: 'Rubik', sans-serif;
+	font-family: 'Comic Sans MS', cursive;
 }
 body p{
-	font-family: 'Source Sans Pro', sans-serif;
+	font-family: 'Comic Sans MS', cursive;
 }
 body{
-	font-family: 'Rubik', sans-serif;
+	font-family: 'Comic Sans MS', cursive;
 }
 ul ,ol {
 	 padding:0;
@@ -88,7 +88,7 @@ h1 {
 }
 #slider3-pager .rslides_here a {
     background: transparent;
-    border: 2px solid #e25111;
+    border: 2px solid #b70e0e;
 }
 #slider3-pager a {
     padding: 4px;
@@ -148,7 +148,7 @@ h1 {
 	margin: 15px 25px;
 }
 .linkEffects li a{
-	font-family: 'Rubik', sans-serif;
+	font-family: 'Comic Sans MS', cursive;
 	font-weight: 400;
 	font-size: 1.1em;
 	position: relative;
@@ -265,12 +265,12 @@ nav.linkEffects.linkHoverEffect_2 ul li a.active {
     letter-spacing: 3px;
     font-weight: bold;
     font-size: 1.3em;
-    font-family: 'Rubik', sans-serif;
+    font-family: 'Comic Sans MS', cursive;
 	margin-top: 0.5em !important;
 	text-decoration: none !important;
 }
 .logo h1 a span {
-    color: #e25111;
+    color: #b70e0e;
 }
 .top-icons ul li {
     font-size: 1.3em;
@@ -280,7 +280,7 @@ nav.linkEffects.linkHoverEffect_2 ul li a.active {
 }
 .top-icons ul li a{
 	color:#fff;
-	font-family: 'Source Sans Pro', sans-serif;
+	font-family: 'Comic Sans MS', cursive;
 	text-decoration: none !important;
 	transition: 0.5s all;
     -webkit-transition: 0.5s all;
@@ -332,13 +332,15 @@ ul#slider3-pager li a img {
 .button {
     margin-top: 3em;
 }
+
 .button a {
     font-size: 1.2em !important;
-    color: #fff !important;
+    position: center;
+    color: #616060 !important;
     letter-spacing: 1px;
-    border: 1px solid #000;
+    border: 1px solid #b70e0e;
     padding: 13px 20px;
-    background: #e25111;
+    background: #6f0000;
 	text-decoration: none !important;
 	transition: 0.5s all;
     -webkit-transition: 0.5s all;
@@ -347,7 +349,7 @@ ul#slider3-pager li a img {
     -ms-transition: 0.5s all;
 }
 .button a:hover {
-	border: 1px solid #fff;
+	border: 1px solid;
     background: none;
 	transition: 0.5s all;
     -webkit-transition: 0.5s all;
@@ -356,6 +358,10 @@ ul#slider3-pager li a img {
     -ms-transition: 0.5s all;
 }
 .button a{
+    border: 1px solid;
+-moz-border-radius: 7px;
+-webkit-border-radius: 7px;
+padding: 10px;
 	
 }
 .button span {
@@ -384,7 +390,7 @@ ul#slider3-pager li a img {
     padding-bottom: 16px;
 	display:inline-block;
 	margin-top:1em;
-	font-family: 'Rubik', sans-serif;
+	font-family: 'Comic Sans MS', cursive;
 }
 .modal-header img{
     float: left;
@@ -458,7 +464,7 @@ div#clients {
     margin-top: 1em;
     color:#e25111;
     text-transform: uppercase;
-	font-family: 'Rubik', sans-serif;
+	font-family: 'Comic Sans MS', cursive;
 }
 .welcome-grid p {
     font-size: 1em;
@@ -698,7 +704,7 @@ i.fa.fa-cutlery {
     font-style: italic;
     text-align: left;
     display: block;
-	font-family: 'Source Sans Pro', sans-serif;
+	font-family: 'Comic Sans MS', cursive;
 }
 .agile {
     margin-bottom: 4em;
@@ -750,7 +756,7 @@ section.stats p.text-center {
     letter-spacing: 1px;
     font-weight: 400;
     margin-top: 1em;
-	font-family: 'Source Sans Pro', sans-serif;
+	font-family: 'Comic Sans MS', cursive;
 }
 /*-- //Counter --*/
 
@@ -767,7 +773,7 @@ section.stats p.text-center {
     color: #000;
 	letter-spacing:1px;
     margin: 0px 1px 20px 0px;
-	font-family: 'Source Sans Pro', sans-serif;
+	font-family: 'Comic Sans MS', cursive;
 }
 .contact-form textarea {
     display: inline-block;
@@ -781,7 +787,7 @@ section.stats p.text-center {
     margin-bottom: 1.5em;
     min-height: 198px;
 	letter-spacing:1px;
-	font-family: 'Source Sans Pro', sans-serif;
+	font-family: 'Comic Sans MS', cursive;
 }
 button.btn1 {
     color: #e25111;
@@ -798,7 +804,7 @@ button.btn1 {
     -moz-transition: 0.5s all;
     -o-transition: 0.5s all;
     -ms-transition: 0.5s all;
-	font-family: 'Rubik', sans-serif;
+	font-family: 'Comic Sans MS', cursive;
 }
 button.btn1:hover {
     background: #e25111;
@@ -847,7 +853,7 @@ button.btn1:hover {
 .cont-top a {
     color: #fff !important;
     font-size: 1em;
-	font-family: 'Source Sans Pro', sans-serif;
+	font-family: 'Comic Sans MS', cursive;
 }
 .left-contact {
     background: #eee;
@@ -873,7 +879,7 @@ button.btn1:hover {
 	letter-spacing:1px;
     font-weight: 700;
     color: rgba(255, 255, 255, 0.23) !important;
-	font-family: 'Rubik', sans-serif;
+	font-family: 'Comic Sans MS', cursive;
 }
 .left-w3 a:hover {
     color: rgba(255, 255, 255, 0.23) !important;
@@ -905,7 +911,7 @@ button.btn1:hover {
 	-o-transition:0.5s all;
 	-moz-transition:0.5s all;
 	-ms-transition:0.5s all;
-	font-family: 'Source Sans Pro', sans-serif;
+	font-family: 'Comic Sans MS', cursive;
 }
 .footer-nav ul li a:hover {
     color: #e25111;
@@ -957,7 +963,7 @@ button.btn1:hover {
     height: 64px;
     border: none;
     text-indent: 100%;
-    background: url(../images/arrow-up.png) no-repeat 0px 0px;
+    background: url(../images/double-chevron-up.png) no-repeat 0px 0px;
 }
 #toTopHover {
     width: 32px;
